--- a/bipolar.rmd
+++ b/bipolar.rmd
@@ -109,6 +109,12 @@ Snabbt isättande av behandling kan motiveras av att maniska perioder kan påver
 
 Diskutera antidepressivas roll. Relatera till tid i mani/depression?
 
+## Psykotiska symtom vid bipolär sjukdom
+
+Mood-incongruent psykotiska symtom medför sämre prognos. Mer likt schizofreni?
+
+Olika vanligt/olika typer av psykotiska symtom vid depressiv vs manisk episod och BPI vs BPII.
+
 ## Skattningsinstrument
 
 Miller CJ, Johnson SL, Eisner L Assessment Tools for Adult Bipolar Disorder. Clin Psychol (New York). 2009 Jun; 16:(2)188-201
