--- a/bipolar.rmd
+++ b/bipolar.rmd
@@ -116,19 +116,35 @@ tbl$drug <- query_label(tbl$drug, varnames)
 colnames(tbl) <- query_label(colnames(tbl), varnames)
 
 x <- tbl
+abbr <- query.abbrev(tbl, abbreviations)
+abbr <- paste0(paste(names(abbr), abbr, sep = ", "), collapse = "; ")
+foot <- paste0("Tabellen visar första- och andrahandsalternativ (kursiv stil). Kolumnerna mani respektive depression avser behandling av akuta episoder. Förkortningar: .", abbr, ".")
 
-foot <- "Från CANMAT riktlinjer (se Yatham 2013). Siffran 1 betyder förstahandsval, 2 är andrahandsval. Kolumnerna mani respektive depression avser behandling av akuta episoder. Förkortningar: Li, litium; Va, valproat; Bu, bupropion; Flx, fluoxetin."
-kable(x, "latex",
+## Ref: CANMAT, Yatham 2013.
+
+x%>%
+    mutate_all(linebreak)%>%
+    kable("latex",
       align = c("l", rep('c', times = ncol(x))),
-      caption = "Behandling vid bipolär sjukdom typ 1",
+      caption = "Behandling vid bipolär sjukdom typ 1",      
       booktabs=TRUE,
-      escape=FALSE
+      escape=FALSE      
       )%>%
+    ## kable_styling(hline_after = T)%>%
+    row_spec(1: nrow(x), hline_after = T) %>%
+    row_spec(0, bold = T) %>%
+    ## row_spec(3, bold = T, color = "white", background = "blue")%>%
+##     column_spec(1:ncol(x),
+## ##                width = "3cm",
+##                 valign = "top")%>%
+    ## kable_styling(latex_options="striped",position = "center",full_width = F)%>%
     footnote(
         general= make_rows(foot),
         general_title = "",
         ##footnote_as_chunk=TRUE, 
-        escape=FALSE) 
+        escape=FALSE)
+    
+    ## kable_styling(bootstrap_options = c("striped", "hover"))
 
 
 ``` 
