--- a/beroende.rmd
+++ b/beroende.rmd
@@ -66,9 +66,9 @@ Egen sammanfattning efter kurs i beroendelära. TODO: Integrera resonemanget om 
 
 Beroendets fysiologi kan beskrivas på olika nivåer: Inlärningspsykologisk (betingning), anatomisk (områden och nervbanor i hjärnan), neurokemisk (signalsubstanser, neurofarmakologi) och genetisk (inkl epigentisk).
 
-Stress- sårbarhetsmodellen är relevant för teorier om beroendeutvecklig. Man har observerat en ärftlig sårbarhet för alkoholberoende, där arvsgången är komplex. Hypoteser finns om att ärftligheten består av annorlunda omsättning av alkohol (farmakokinetik, tex polymorfism alkoholdehydrogenas), annorlunda upplevelse av ruset (farmakodynamik) och annorlunda molekylära adaptationer. Intressant nog finns en överlappning mellan genetisk predisposition för olika typer av drogberoende. Miljöfaktorer av betydelse inkluderar stress, livstrauman, våld, beteendet hos "peers" och drogens tillgänglighet. Man har funnit att stress, tex negativa livshändelser, ger känslighet för beroendesjukdomar. Både kortisol- och noradrenalinsystemen är förändrade och sambandet tycks gå i båda riktningar, dvs stress ökar risken för beroende och beroendesjukdomen medför en stressrespons, exempelvis ger akut abstinens en ökad frisättning av corticotropin releasing hormone (CRF). Man har även sett att prenatal stress ger ökad CRF-sekretion vid stressrespons hos barnet i vuxen ålder, vilket hypotetiskt skulle kunna ha betydelse för risken att utveckal beroende vid drogbruk. \cite{Koob2004}
+Stress- sårbarhetsmodellen är relevant för teorier om beroendeutveckling. Man har observerat en ärftlig sårbarhet för alkoholberoende, där arvsgången är komplex. Hypoteser finns om att ärftligheten består av annorlunda _omsättning_ av alkohol (farmakokinetik, tex polymorfism alkoholdehydrogenas), annorlunda _upplevelse_ av ruset (farmakodynamik) och annorlunda _molekylära adaptationer_. Intressant nog finns en överlappning mellan genetisk predisposition för olika typer av drogberoende. Miljöfaktorer av betydelse inkluderar stress, livstrauman, våld, beteendet hos "peers" och drogens tillgänglighet. Man har funnit att stress, tex negativa livshändelser, ger känslighet för beroendesjukdomar. Både kortisol- och noradrenalinsystemen är förändrade och sambandet tycks gå i båda riktningar, dvs stress ökar risken för beroende och beroendesjukdomen medför en stressrespons, exempelvis ger akut abstinens en ökad frisättning av corticotropin releasing hormone (CRF). Man har även sett att prenatal stress ger ökad CRF-sekretion vid stressrespons hos barnet i vuxen ålder, vilket hypotetiskt skulle kunna ha betydelse för risken att utveckal beroende vid drogbruk. \cite{Koob2004}
 
-Hos personer som utvecklar drogberoende sker psykologiska och motsvarande biologiska förändringar som kan förklara övergången från drogbruk utan beroende till ett beroendesyndrom som kännetecknas av bland annat toleransutveckling, abstinens och negativt känsloläge i frånvaro av drogen. Initialt karakteriseras beroendet av svårigheter med impulskontroll för att senare i förloppet präglas av tvångsmässigt eftersökande och intag av drogen. I fasen med bristande impulskontroll (impulsiva handlingar) föregås handlingen av upprymdhet som övergår till vällust efter intag, vilket i inlärningspsykologiska termer ger positiv förstärkning av beteendet. Vid tvångsmässighet (repetitiva handlingar) föreligger ångest som minskar efter intag av drogen. Detta ger negativ förstärkning av det beteendet.  Beroende karakteras, i jämförelse med drogbruk utan beroende, av ett negativt känsloläge (dysfori, ångest, irritabiltet) när man ej har tillgång till drogen. Vid droganvändning stiger belöningströskeln gradvis men snabbt även för andra stimuli än själva drogen och vid långvarig användning blir denna störning av det naturliga belöningssystemet ihållande \cite{Koob2004}.
+Hos personer som utvecklar drogberoende sker psykologiska och motsvarande biologiska förändringar som kan förklara övergången från drogbruk utan beroende till ett beroendesyndrom som kännetecknas av bland annat toleransutveckling, abstinens och negativt känsloläge i frånvaro av drogen. Initialt karakteriseras beroendet av svårigheter med impulskontroll för att senare i förloppet präglas av tvångsmässigt eftersökande och intag av drogen. I fasen med bristande impulskontroll föregås drogtagandet av upprymdhet som övergår till vällust efter intag, vilket i inlärningspsykologiska termer ger positiv förstärkning av beteendet. I det tvångsmässiga stadiet (repetitiva handlingar) föreligger ångest som minskar efter intag av drogen. Detta ger negativ förstärkning av beteendet.  Beroende karakteras, i jämförelse med drogbruk utan beroende, av ett negativt känsloläge (dysfori, ångest, irritabiltet) när personen ej har tillgång till drogen. Vid droganvändning stiger belöningströskeln gradvis men snabbt även för andra stimuli än själva drogen och vid långvarig användning blir denna störning av det naturliga belöningssystemet ihållande \cite{Koob2004}.
 
 Vid långvarig droganvändning sker biologisk anpassing som motsvarar de psykologiska mekanismer (övergång från positiv till negativ förstärkning) och kliniska observationer (impulskontrollstörning och senare tvångsmässighet samt negativ affekt i frånvaro av drogen) som beskrivits ovan. Övergången från bruk till beroende kan beskrivas med en _allostatisk_ modell, där kompensatoriska mekanismer uppnår ett nytt jämviktsläge som skiljer sig från det normala. Funktioner bibehålls därmed genom att utgånsläget i belönings- och kontrollsystemet förskjuts. Grunden för detta är en allmän teori om neuroadaptation där ett stimuli startar en första process (process A) som efter en stund motverkas av en adaptiv process (process B) och där summan av dessa (A - B) utgör responsen (TODO Figur insert neuroadaptation.png). Denna modell kan förklara observationer av olika adaptiva processer i nervsystemet. Toleransutveckling vid drogberoende kan på så vis förklaras med en allt starkare B-pocess som minskar de positiva effekterna av drogintag samtidigt som fortsatt intag av drogen behövs för att återgå till jämviktsläget och minska abstinenssymtomen. I den allostatiska modellen sker en gradvis förskjutning av detta jämviktsläge så att en negativa utgångspunkt kvarstår när nästa drogintag sker. \cite{Koob2004}
 
@@ -80,14 +80,19 @@ Dopamin och (ventrala?) striatum involverade i de positivt förstärkande effekt
 
 ### Neuroadaptation vid alkoholintag
 
-Alkoholintag har olika effekter vid intag jämfört med kroniskt eller ofta återkommande bruk. Alkohol interagerar med receptorer i olika signalsystem och ombyggnad av dessa system är associerat med toleransutveckling och abstinenssyndrom. Vid intag av alkohol hämmas glutamaterga (excitatoriska) nervsignaler, medan kroniskt alkoholintag istället ökar denna typ av signalering. I enlighet med den allostatiska modellen måste då personen int alkohol för att återställa balans i glutamatsignaleringen. Liknande förändringar ses i hjärnans inhibitoriska system, dvs på signalsubstansen GABA och dess receptorer, där alkoholintag stimulerar systemet och kroniskt bruk troligen hämmar systemet (dock ses  olika effekter i olika delar av hjärnan). \cite{Roberto2017}
+Alkoholintag har olika effekter vid intag jämfört med kroniskt eller ofta återkommande bruk. Alkohol interagerar med receptorer i olika signalsystem och ombyggnad av dessa system är associerat med toleransutveckling och abstinenssyndrom. Vid intag av alkohol hämmas glutamaterga (excitatoriska) nervsignaler, medan kroniskt alkoholintag istället ökar denna typ av signalering. I enlighet med den allostatiska modellen måste då personen inta alkohol för att återställa balans i glutamatsignaleringen. Liknande förändringar ses i hjärnans inhibitoriska system, dvs på signalsubstansen GABA och dess receptorer, där alkoholintag stimulerar systemet och kroniskt bruk troligen hämmar systemet (dock ses  olika effekter i olika delar av hjärnan). \cite{Roberto2017}
 
-I det glutamaterga systemet finns flera typer av glutamatreceptorer (jonkanalerna AMPA-R, NMDA-R och kainat-R samt G-proteinkopplade receptorer), där NMDA-R är den som främst påverkas av alkohol. Alkoholintag hämmar NMDA-R medan kroniskt bruk leder via påverkan på transkriptionen till ändring av receptorernas komposition (subenheter), vilket påverkar deras känslighet för etanol med följden att receptorn sensitiseras. Även fosforylering och distribution av receptorn i nervcellens membran kan troligen påverkas. Alkohol påverkan även andra typer av glutamatreceptorer och leder dessutom till ökade nivåer av glutamat i nervsynapsen. Kronisk EtOH uppreglerar även flera gener inblandede i glutamaterg neurotransmission. Sammantaget ger kroniskt alkoholintag sensitisering av glutamatreceptorer och ökad presynaptisk glutamatfrisättning, i kombination med minskat återupptag, vilket leder till ökade glutamatnivåer i centrala amygdala, hippocampus och striatum. Detta tros orsaka hyperexcitabilitet och excitotoxicitet tidigt under abstinensförloppet, vilket bidrar till celldöd i hjärnan. \cite{Roberto2017}
+I det glutamaterga systemet finns flera typer av glutamatreceptorer (jonkanalerna AMPA-R, NMDA-R och kainat-R samt G-proteinkopplade receptorer), där NMDA-R är den som främst påverkas av alkohol. Alkoholintag hämmar NMDA-R medan kroniskt bruk leder via påverkan på transkriptionen till ändring av receptorernas komposition (subenheter), vilket påverkar deras känslighet för etanol med följden att receptorn sensitiseras. Även fosforylering och distribution av receptorn i nervcellens membran kan troligen påverkas. Alkohol påverkar även andra typer av glutamatreceptorer och leder dessutom till ökade nivåer av glutamat i nervsynapsen. Kronisk EtOH uppreglerar även flera gener inblandede i glutamaterg neurotransmission. Sammantaget ger kroniskt alkoholintag sensitisering av glutamatreceptorer och ökad presynaptisk glutamatfrisättning, i kombination med minskat återupptag, vilket leder till ökade glutamatnivåer i centrala amygdala, hippocampus och striatum. Detta tros orsaka hyperexcitabilitet och excitotoxicitet tidigt under abstinensförloppet, vilket bidrar till celldöd i hjärnan. \cite{Roberto2017}
 
-Även i GABA-systemet finns flera typer av receptorer (jonkanalerna GABAA-R och GABAC-R samt den G-proteinkopplade GABAB-R). Alkoholintag förstärker funktionen bland annat hos olika jonkanalreceptorer med "cys-loops", inklusive GABAA-R, strychnine-sensitive glycine receptor (GlyR), nicotinic acetylcholine receptor (nAChR) och serotonin 3 receptor (5-HT3), genom att öka sannolikheten för öppning av kanalen och/eller öka agonistaffinitet. Alkohol har således en GABA-erg effekt och kroniskt alkoholintag påverkar GABA-receptorernas sammansättning (subehnhetskomposition) och -farmakologi. De exakta mekanismerna bakom de observerad effekterna av alkohol på GABA-receptorer är relativt okända, men hypotetiskt kan det röras sig om påverkan på endocytos, återvinning, nedbrytning, transport och syntes av receptorer och deras subenheter, samt fosforylering av GABAA-R och intracellulär signallering via second messengers. Adaptationen till kroniskt alkoholbruk skiljer sig i olika områden av hjärnan där cortex cerebri, hippocampus och amygdala identifierats som viktiga områden. GABAA-R adaptation tros vara av betydelse för toleransutveckling mot flera av alkoholens akuta effekter såsom anxiolys, sedation, ataxi, positiv förstärkning och tros vara förknippat med ökad krampbenägenhet vid alkoholabstinens. \cite{Roberto2017}
+Även i GABA-systemet finns flera typer av receptorer (jonkanalerna GABAA-R och GABAC-R samt den G-proteinkopplade GABAB-R). Alkoholintag förstärker funktionen bland annat hos olika jonkanalreceptorer med "cys-loops", inklusive GABAA-R, strychnine-sensitive glycine receptor (GlyR), nicotinic acetylcholine receptor (nAChR) och serotonin 3 receptor (5-HT3), genom att öka sannolikheten för öppning av kanalen och/eller öka agonistaffiniteten. Alkohol har således en GABA-erg effekt och kroniskt alkoholintag påverkar GABA-receptorernas sammansättning (subehnhetskomposition) och -farmakologi. De exakta mekanismerna bakom de observerad effekterna av alkohol på GABA-receptorer är relativt okända, men hypotetiskt kan det röras sig om påverkan på endocytos, återvinning, nedbrytning, transport och syntes av receptorer och deras subenheter, samt fosforylering av GABAA-R och intracellulär signallering via second messengers. Adaptationen till kroniskt alkoholbruk skiljer sig i olika områden av hjärnan där cortex cerebri, hippocampus och amygdala identifierats som viktiga områden. GABAA-R adaptation tros vara av betydelse för toleransutveckling mot flera av alkoholens akuta effekter såsom anxiolys, sedation, ataxi, positiv förstärkning och tros vara förknippat med ökad krampbenägenhet vid alkoholabstinens. \cite{Roberto2017}
 
+### Alkoholrelaterad hjärnskada
 
+"Alkoholrelaterad hjärnskada" är ett paraplybegrepp som innefattar hjärnskador av olika karaktär och orsak. De toxiska effekterna av alkohol varierar mellan olika områden i hjärnan. Det vanligaste fyndet vid långvarigt och omfattande alkoholberoende är vitsubstansförlust. Andra tillstånd som kan ge neurologiska besvär wernicke-korsakoffs syndrom, central pontin myelinolys, pellagra-encefalopati, hepatisk encefalopati, förvärvad hepatocerebral degeneration och traumatiska hjärnskador. Dessa tillstånd kan ge upphov till bland annat kognitiva svårigheter (alltifrån lindrig kognitiv störning till demens), depression, exekutiva svårigheter, minnesproblem, motoriska svårigheter, död. \cite{Monte2014}
 
+Se tabell: alkohol-nervskador.csv [../notes] för symtom, prevalens mm
+
+Mekanismerna bakom alkoholrelaterad hjärnskada är endast delvis kända. Alkoholleverskada har indirekta effekter på hjärnan genom leverns minskade kapacitet för nedbrytning av etanol och toxiska ämnen (exempelvis ammonium, toxiska lipider, aromatiska aminosyror). Inflammatoriska substanser genererade av leversvikten kan också spela en roll. Alkoholberoendesyndromet kan även leda till olika bristtillstånd (tiamin, folat, pyridoxin, zink) som kan ha betydelse för uppkomsten av alkoholrelaterad hjärnskada, där tiaminbrist troligen är den viktigaste. \cite{Monte2014}
 
 ## Kroppen och missbruk
 
